[project]
name = "eir"
version = "v0.1.0"
description = "FastAPI template"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic==1.18.0",
    "asyncpg==0.31.0",
    "bcrypt==4.3.0",
    "emails==0.6",
    "factory-boy>=3.3.1",
    "fastapi[standard]==0.128.0",
    "httpx==0.28.1",
    "jinja2==3.1.5",
    "passlib==1.7.4",
    "psycopg2>=2.9.11",
    "pydantic-settings==2.7.1",
    "pydantic[email]==2.11.3",
    "pydantic_core==2.33.1",
    "pyjwt==2.10.1",
    "python-multipart==0.0.20",
    "SQLAlchemy==2.0.45",
    "sqlmodel==0.0.21",
    "starlette==0.50.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.26.0",
    "pre_commit>=4.2.0",
    "pytest>=9.0.2",
]

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B101"]

[tool.black]
line-length = 120
target_version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py313"
exclude = [
    ".idea",
    ".git",
    ".mypy_cache",
    "__pypackages__",
    "app/alembic/",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "BLE",  # flake8-blind-except
    "A",  # flake8-builtins
    "DJ",  # flake8-django
    "I",  # isort
    "INP",  # flake8-no-pep420
    "RUF"  # Ruff-specific rules
]
ignore = [
    "S101",  # assert used
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.per-file-ignores]
# Ignore "E402", "F403", "F405" (import violations) in __init__.py files.
# Ignore "S" (flake8-bandit) and "N802" (function name should be lowercase) in tests and docs.
# Ignore "RUF" (Ruff-specific rules) and "I" (isort) in migrations.
"__init__.py" = ["E402", "F403", "F405"]
"tests/*" = ["E402", "F403", "F405", "S", "N802", "N815"]
"**/test*.py" = ["E402", "F403", "F405", "S", "N802"]
"alembic/*" = ["N999", "RUF", "I"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.isort.sections]
# Group imports into a separate sections.
"app" = ["app"]
"fastapi" = ["fastapi", "pydantic", "sqlmodel"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
